añadir últimos cambios

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
    font-family: Arial, sans-serif;
   margin: 20px;
-   background-color: #f2f2f2;
+   background-color: #c70e0e;
 }
 ul {
    margin-top: 20px;
