--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
    font-family: Arial, sans-serif;
   margin: 20px;
-   background-color: #c70e0e;
+   background-color: #a57a7a;
+   background: radial-gradient(circle, #a57a7a, #744e94); 
 }
 ul {
    margin-top: 20px;
@@ -9,9 +10,12 @@ ul {
    padding: 0;
 }
 li {
+   border: 10px solid var(--border-color);
+   border-right: 10px;
    font-size: 18px;
    padding: 4px;
-   background-color: #e4f0ff;
+
+   background-color: #605c86;
    margin-bottom: 5px;
    border-radius: 4px;
 }
